# envbeats

./: readme.md
eb_assessee_gym/: README.md  main.py  my_util.py  pyproject.toml
eb_assessee_human/: README.md  main.py  mcp.json  pyproject.toml
eb_assessee_pure_mcp/: .example.env  .gitignore  readme.md
eb_assessee_pure_mcp/a2a-mcp-without-framework/src/no_llm_framework/server/: __main__.py  agent.py  agent_executor.py  called_tools_history.jinja  gym.jinja  mcp.py
eb_assessor/: .gitignore  main.py  my_agent.py  pyproject.toml
eb_kickoff/: main.py  pyproject.toml
mcp-x/: .gitignore  config.example.toml  mcp_x.py
